@@ -15,6 +15,8 @@
 	(org-clone-delete-id): New customization variable.
 	(org-clone-subtree-with-time-shift): Use customization
 	variable `org-clone-delete-id'.
+	(org-clone-subtree-with-time-shift): Remove empty property
+	drawer in cloned subtrees.
 
 2010-05-17  Carsten Dominik  <carsten.dominik@gmail.com>
 
